chore(datadog-agent-nvml): remove unneeded comments
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent-nvml.yaml
+++ b/datadog-agent-nvml.yaml
@@ -7,7 +7,7 @@ package:
     - license: Apache-2.0
   dependencies:
     runtime:
-      - datadog-agent # always pick the latest agent to run the `integration install` c ommand.
+      - datadog-agent
       - datadog-agent-core-integrations
 
 environment:
