--- a/datadog-agent-nvml.yaml
+++ b/datadog-agent-nvml.yaml
@@ -7,8 +7,7 @@ package:
     - license: Apache-2.0
   dependencies:
     runtime:
-      - datadog-agent
-      - datadog-agent-core-integrations
+      - python-3.11
 
 environment:
   contents:
