new pkg: kakoune, add auto-update
Signed-off-by: Tuan Anh Tran <me@tuananh.org>

--- a/kakoune.yaml
+++ b/kakoune.yaml
@@ -35,3 +35,9 @@ test:
   pipeline:
     - name: Verify kakoune installation
       runs: kak -version || exit 1
+
+update:
+  enabled: true
+  github:
+    identifier: mawww/kakoune
+    strip-prefix: v
