--- a/cloudwatch-exporter.yaml
+++ b/cloudwatch-exporter.yaml
@@ -40,3 +40,31 @@ update:
     identifier: prometheus/cloudwatch_exporter
     strip-prefix: v
     use-tag: true
+
+test:
+  environment:
+    contents:
+      packages:
+        - curl
+        - openjdk-21-default-jvm
+    environment:
+      LANG: en_US.UTF-8
+      JAVA_HOME: "/usr/lib/jvm/java-21-openjdk"
+  pipeline:
+    - name: "Test run"
+      uses: test/daemon-check-output
+      with:
+        setup: |
+          echo "
+          ---
+          region: eu-west-1
+          metrics:
+          - aws_namespace: AWS/NetworkELB
+            aws_metric_name: HealthyHostCount
+            aws_dimensions: [AvailabilityZone, LoadBalancer, TargetGroup]
+            aws_statistics: [Average]
+          " > /tmp/config.yml
+        start: java -jar /usr/share/java/cloudwatch_exporter/cloudwatch_exporter.jar 9106 /tmp/config.yml
+        timeout: 30
+        expected_output: Started Server
+        post: curl http://localhost:9106/metrics | grep -q 'cloudwatch_exporter_build_info'
