remove patch, the changes are either now in upstream, or the versions have moved onto later versions. Also expanded test coverage
Signed-off-by: Mark McCormick <mark.mccormick@chainguard.dev>

--- a/py3-pip.yaml
+++ b/py3-pip.yaml
@@ -33,10 +33,6 @@ pipeline:
       expected-commit: cdba22f49b425fe4a57a8daf992fd6335c8010a1
       tag: ${{package.version}}
 
-  - uses: patch
-    with:
-      patches: pip-urllib3-bump.patch
-
 subpackages:
   - range: py-versions
     # Historically py3.X-pip installed /usr/bin/pip
@@ -66,6 +62,40 @@ subpackages:
           mkdir -p ${{targets.contextdir}}/usr/bin
           mv ${{targets.contextdir}}/../py${{range.key}}-${{vars.pypi-package}}-base/usr/bin/pip ${{targets.contextdir}}/usr/bin/
           mv ${{targets.contextdir}}/../py${{range.key}}-${{vars.pypi-package}}-base/usr/bin/pip3 ${{targets.contextdir}}/usr/bin/
+    test:
+      environment:
+        contents:
+          packages:
+            - python-${{range.key}}
+      pipeline:
+        - name: "Basic pip command tests"
+          uses: python/import
+          with:
+            import: pip
+          runs: |
+            pip --version
+            pip --help
+            pip wheel --help
+            pip3 --version
+            pip3 --help
+            pip3 wheel --help
+        - name: "Check pip installation of a simple package"
+          runs: |
+            pip install requests
+            python -c "import requests; print('requests imported successfully')"
+        - name: "Verify pip list and show"
+          runs: |
+            pip list | grep requests
+            pip show requests
+        - name: "Uninstall the test package"
+          runs: |
+            pip uninstall -y requests
+            python -c "import requests" && echo "ERROR: requests not uninstalled" && exit 1 || echo "requests successfully uninstalled"
+        - name: "Check pip cache functionality"
+          runs: |
+            pip cache list | head -n 10
+            pip cache remove '*'
+            pip cache dir | xargs ls -al
 
   - name: py3-supported-${{vars.pypi-package}}
     description: meta package providing ${{vars.pypi-package}} for supported python versions.
@@ -109,14 +139,3 @@ update:
   github:
     identifier: pypa/pip
     use-tag: true
-
-test:
-  pipeline:
-    - uses: python/import
-      with:
-        import: pip
-      runs: |
-        pip --version
-        pip --help
-        pip3 --version
-        pip3 --help
