--- a/jellyfin.yaml
+++ b/jellyfin.yaml
@@ -67,3 +67,44 @@ update:
     identifier: jellyfin/jellyfin
     use-tag: true
     strip-prefix: v
+
+test:
+  pipeline:
+    - name: "Start Jellyfin server"
+      runs: |
+        jellyfin --nowebclient > /tmp/jellyfin.log 2>&1 &
+        JELLYFIN_PID=$!
+
+        # Wait a few seconds to let Jellyfin attempt to start
+        sleep 10
+
+        # Check if Jellyfin process is still running
+        if ! ps | grep -q "$JELLYFIN_PID"; then
+          echo "Test failed: Jellyfin failed to start."
+          echo "----- Jellyfin Debug Logs -----"
+          cat /tmp/jellyfin.log
+          exit 1
+        else
+          echo "Test passed: Jellyfin started successfully."
+        fi
+    - name: "Verify Jellyfin HTTP service on port 8096"
+      runs: |
+        echo "Checking if Jellyfin is listening on port 8096..."
+        for i in {1..5}; do
+          if netstat -tuln | grep -q ":8096"; then
+            echo "Port 8096 is open for Jellyfin."
+            exit 0
+          else
+            echo "Port 8096 not yet open. Retrying in 5 seconds..."
+            sleep 5
+          fi
+        done
+
+        # Final check after retries
+        if ! netstat -tuln | grep -q ":8096"; then
+          echo "Test failed: Jellyfin is not listening on port 8096."
+          echo "----- Jellyfin Debug Logs -----"
+          cat /tmp/jellyfin.log
+          kill $JELLYFIN_PID || true
+          exit 1
+        fi
