fix package build
Signed-off-by: Dentrax <furkan.turkal@chainguard.dev>

--- a/ruby3.3-json.yaml
+++ b/ruby3.3-json.yaml
@@ -24,6 +24,10 @@ pipeline:
       tag: v${{package.version}}
       expected-commit: 9e9b749576dc7a195241f46305cdb7ed80e3e445
 
+  - runs: |
+      # Upstream sometimes forgets to update the version in their version.rb file after a release.
+      sed -i "s/\(VERSION = '\)[^']*/\1${{package.version}}/" lib/json/version.rb
+
   - uses: ruby/build
     with:
       gem: ${{vars.gem}}
