remove obsolated patch and add test
Signed-off-by: Dentrax <furkan.turkal@chainguard.dev>

--- a/py3-jupyterhub-kubespawner.yaml
+++ b/py3-jupyterhub-kubespawner.yaml
@@ -34,8 +34,6 @@ pipeline:
       expected-commit: a8f28439078e42e8012de8f141b51bd6fa96d9c7
       repository: https://github.com/jupyterhub/kubespawner
       tag: ${{package.version}}
-      cherry-picks: |
-        main/7c4c9a6d0977a75ddb768ad0a3087d033d: fix build with newer hatchling
 
   - name: Python Build
     uses: python/build-wheel
@@ -50,3 +48,9 @@ update:
   github:
     identifier: jupyterhub/kubespawner
     use-tag: true
+
+test:
+  pipeline:
+    - uses: python/import
+      with:
+        import: kubespawner
