do not hardcode version path
Signed-off-by: Dentrax <furkan.turkal@chainguard.dev>

--- a/apache-nifi.yaml
+++ b/apache-nifi.yaml
@@ -117,7 +117,7 @@ subpackages:
           TARGET_DIR="nifi-toolkit/nifi-toolkit-assembly/target"
 
           # Unzip toolkit
-          unzip "${TARGET_DIR}/nifi-toolkit-1.27.0-bin.zip" -d "${TARGET_DIR}"
+          unzip "${TARGET_DIR}/nifi-toolkit-${{package.version}}-bin.zip" -d "${TARGET_DIR}"
 
           # Install toolkit
           mkdir -p "${{targets.contextdir}}/${NIFI_BASE}"
