--- a/zetasql.yaml
+++ b/zetasql.yaml
@@ -18,7 +18,7 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
-      - gcc-12
+      - gcc
       - git
       - glibc-locale-en # This fixes the build failure with UTF-8 filenames, see wolfi-dev/os#26865
       - openjdk-17
