continue removing debug directory
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/clickhouse-24.9.yaml
+++ b/clickhouse-24.9.yaml
@@ -70,6 +70,7 @@ pipeline:
       mkdir -p  ${{targets.destdir}}/var/lib/clickhouse
       mkdir -p  ${{targets.destdir}}/var/log/clickhouse-server
       DESTDIR=${{targets.destdir}} ninja install
+      rm -rf ${{targets.destdir}}/usr/lib/debug
 
   - uses: strip
 
@@ -78,11 +79,6 @@ subpackages:
     description: "headers for clickhouse"
     pipeline:
       - uses: split/dev
-
-  - name: "${{package.name}}-debug"
-    description: "headers for clickhouse"
-    pipeline:
-      - uses: split/debug
 
   - name: "${{package.name}}-bash-completion"
     description: "bash completion for clickhouse"
