Add bitnami compat package to already existing package
Signed-off-by: anushkamittal20 <anushka.mittal@chainguard.dev>

--- a/prometheus-mysqld-exporter.yaml
+++ b/prometheus-mysqld-exporter.yaml
@@ -36,6 +36,15 @@ pipeline:
 
   - uses: strip
 
+subpackages:
+  - name: prometheus-mysqld-exporter-bitnami-compat
+    description: "compat package with bitnami/mysqld-exporter image"
+    pipeline:
+      - uses: bitnami/compat
+        with:
+          image: mysqld-exporter
+          version-path: 0/debian-12
+
 update:
   enabled: true
   github:
