--- a/prometheus-mysqld-exporter.yaml
+++ b/prometheus-mysqld-exporter.yaml
@@ -44,6 +44,10 @@ subpackages:
         with:
           image: mysqld-exporter
           version-path: 0/debian-12
+      - runs: |
+          mkdir -p ${{targets.subpkgdir}}/opt/bitnami/mysqld-exporter/bin/
+          chmod g+rwX ${{targets.subpkgdir}}/opt/bitnami
+          ln -sf /usr/bin/mysqld_exporter ${{targets.subpkgdir}}/opt/bitnami/mysqld-exporter/bin/mysqld_exporter
 
 update:
   enabled: true
