--- a/clickhouse-24.9.yaml
+++ b/clickhouse-24.9.yaml
@@ -1,7 +1,7 @@
 package:
   name: clickhouse-24.9
   version: 24.9.2.42
-  epoch: 0
+  epoch: 1
   description: ClickHouse is the fastest and most resource efficient open-source database for real-time apps and analytics.
   copyright:
     - license: Apache-2.0
@@ -32,6 +32,7 @@ environment:
       - llvm-lld-17-dev
       - nasm
       - ninja
+      - openssl-dev
       - perl
       - python3
       - yasm
@@ -46,19 +47,22 @@ pipeline:
   # The default build script is defensive and tries to protect against defining cflags.
   - uses: patch
     with:
-      patches: allow_cflags.patch
+      patches: allow_cflags.patch dynamically_link_openssl.patch
 
   - runs: |
       git submodule update --init
-      mkdir build
-      cd build
-      cmake \
+
+  - uses: cmake/configure
+    with:
+      output-dir: build
+      opts: |
+        -DCMAKE_C_FLAGS="-fPIC" \
+        -DCMAKE_CXX_FLAGS="-fPIC" \
         -DCOMPILER_CACHE=disabled \
         -DCMAKE_INSTALL_PREFIX=/usr \
         -DCMAKE_BUILD_TYPE=Release \
         -DNO_ARMV81_OR_HIGHER=1 \
-        -DCMAKE_INSTALL_LIBDIR=lib \
-        ..
+        -DCMAKE_INSTALL_LIBDIR=lib
 
   - runs: |
       cd build
