chore(open-liberty): Small cleanup, expand tests
We don't need the full OpenJDK during tests or to copy the zip out to
the destination directory; just extract it

Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/open-liberty.yaml
+++ b/open-liberty.yaml
@@ -27,17 +27,14 @@ pipeline:
       repository: https://github.com/OpenLiberty/open-liberty
       tag: gm-${{package.version}}
 
-  - runs: |
-      cd dev
+  - working-directory: dev
+    runs: |
       ./gradlew cnf:initialize
       ./gradlew assemble
       ./gradlew releaseNeeded
 
       mkdir -p ${{targets.contextdir}}/usr/share/java/openliberty
-      cp -r cnf/release/dev/openliberty/${{package.version}}*/openliberty-${{package.version}}*.zip ${{targets.contextdir}}/usr/share/java/openliberty/openliberty-${{package.version}}.zip
-
-      unzip -q ${{targets.contextdir}}/usr/share/java/openliberty/openliberty-${{package.version}}.zip -d ${{targets.contextdir}}/usr/share/java/openliberty
-      rm ${{targets.contextdir}}/usr/share/java/openliberty/openliberty-${{package.version}}.zip
+      unzip -q cnf/release/dev/openliberty/${{package.version}}*/openliberty-${{package.version}}*.zip -d ${{targets.contextdir}}/usr/share/java/openliberty
 
   - uses: strip
 
@@ -52,10 +49,13 @@ test:
   environment:
     contents:
       packages:
-        - openjdk-21
         - openjdk-21-default-jvm
-        - busybox
   pipeline:
     - runs: |
-        /usr/share/java/openliberty/wlp/bin/server help
-        /usr/share/java/openliberty/wlp/bin/client help
+        export PATH="/usr/share/java/openliberty/wlp/bin:$PATH"
+        server help
+        client help
+        server create
+        server start
+        client create
+        server stop
