--- a/py3-msgpack.yaml
+++ b/py3-msgpack.yaml
@@ -39,6 +39,9 @@ pipeline:
       tag: v${{package.version}}
       expected-commit: 4587393b1ae2c9ebbd5bc93005b8aea2c8050b27
 
+  - name: Compile all .pyx files
+    runs: make cython
+
 subpackages:
   - range: py-versions
     name: py${{range.key}}-${{vars.pypi-package}}
@@ -48,7 +51,7 @@ subpackages:
       provides:
         - py3-${{vars.pypi-package}}
     pipeline:
-      - uses: py/pip-build-install
+      - uses: py/install-compile
         with:
           python: python${{range.key}}
       - uses: strip
