tensorflow-core - multi-version for python

--- a/tensorflow-core.yaml
+++ b/tensorflow-core.yaml
@@ -42,17 +42,24 @@ environment:
       - perl
       - py3-gpep517
       - py3-installer
-      - py3-keras-applications
-      - py3-keras-preprocessing
-      - py3-packaging
-      - py3-pybind11
-      - py3-pybind11-dev
-      - py3-requests
-      - py3-setuptools
-      - py3-wheel
-      - python-3-dev
+      - py3-supported-keras-applications
+      - py3-supported-keras-preprocessing
+      - py3-supported-pybind11
+      - py3-supported-build-base
+      - py3-supported-python-dev
       - wolfi-base
       - zlib-dev
+
+vars:
+  pypi-package: tensorflow-core
+  import: tensorflow
+
+data:
+  - name: py-versions
+    items:
+      3.10: '310'
+      3.11: '311'
+      3.12: '312'
 
 pipeline:
   - uses: git-checkout
@@ -131,20 +138,33 @@ pipeline:
   - uses: strip
 
 subpackages:
-  - name: py3-tensorflow-core
-    description: Tensorflow Python API
+  - range: py-versions
+    name: py${{range.key}}-${{vars.pypi-package}}
+    description: python${{range.key}} version of ${{vars.pypi-package}}
     dependencies:
+      provider-priority: ${{range.value}}
       provides:
-        - so:libbfloat16.so.so=0
+        - py3-${{vars.pypi-package}}
     pipeline:
-      - runs: |
-          _pyver=$(python -c 'import sys; print(str(sys.version_info[0]) + "." + str(sys.version_info[1]))')
-          _pypath="/usr/lib/python${_pyver}"
-          mkdir -p "${{targets.contextdir}}"/usr/lib
-          mkdir -p "${{targets.contextdir}}"/usr/bin
-          mv "${{targets.destdir}}"${_pypath} "${{targets.contextdir}}"${_pypath}
-          mv "${{targets.destdir}}"/usr/bin "${{targets.contextdir}}"/usr/bin
-          find "${{targets.contextdir}}"${_pypath} -name "libtensorflow*.so*" -exec rm -rf '{}' +
+      - uses: py/pip-build-install
+        with:
+          python: python${{range.key}}
+      - uses: strip
+    test:
+      pipeline:
+        - uses: python/import
+          with:
+            python: python${{range.key}}
+            imports: |
+              import ${{vars.import}}
+
+  - name: py3-supported-${{vars.pypi-package}}
+    description: meta package providing ${{vars.pypi-package}} for supported python versions.
+    dependencies:
+      runtime:
+        - py3.10-${{vars.pypi-package}}
+        - py3.11-${{vars.pypi-package}}
+        - py3.12-${{vars.pypi-package}}
 
   - name: tensorflow-dev
     description: Tensorflow development headers
