--- a/calico-3.28.yaml
+++ b/calico-3.28.yaml
@@ -1,7 +1,7 @@
 package:
   name: calico-3.28
   version: 3.28.2
-  epoch: 0
+  epoch: 1
   description: "Cloud native networking and network security"
   copyright:
     - license: Apache-2.0
@@ -47,6 +47,7 @@ environment:
       - libpcap-dev
       - linux-headers
       - llvm16
+      - openssf-compiler-options
       - zlib-dev
       - zstd-dev
 
