--- a/cargo-audit.yaml
+++ b/cargo-audit.yaml
@@ -1,7 +1,7 @@
 package:
   name: cargo-audit
   version: 0.20.1
-  epoch: 0
+  epoch: 1
   description: Audit your dependencies for crates with security vulnerabilities reported to the RustSec Advisory Database.
   copyright:
     - license: MIT OR Apache-2.0
@@ -12,6 +12,7 @@ environment:
       - build-base
       - busybox
       - cargo-auditable
+      - openssf-compiler-options
       - rust
 
 pipeline:
