--- a/cargo-auditable.yaml
+++ b/cargo-auditable.yaml
@@ -1,7 +1,7 @@
 package:
   name: cargo-auditable
   version: 0.6.4
-  epoch: 1
+  epoch: 2
   description: Cargo wrapper for embedding auditing data
   copyright:
     - license: MIT OR Apache-2.0
@@ -11,6 +11,7 @@ environment:
     packages:
       - build-base
       - busybox
+      - openssf-compiler-options
       - rust
 
 pipeline:
