python/multi-version batch 25

--- a/py3-jupyterhub-kubespawner.yaml
+++ b/py3-jupyterhub-kubespawner.yaml
@@ -24,6 +24,7 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
+      - py3-hatchling
       - py3-setuptools
       - python-3
       - wolfi-base
