--- a/open-liberty.yaml
+++ b/open-liberty.yaml
@@ -5,16 +5,6 @@ package:
   description: "Open Liberty is a highly composable, fast to start, dynamic application server runtime environment"
   copyright:
     - license: EPL-2.0
-  dependencies:
-    provider-priority: 0
-
-data:
-  - name: openjdk-versions
-    items:
-      8: "java-1.8-openjdk"
-      11: "java-11-openjdk"
-      17: "java-17-openjdk"
-      21: "java-21-openjdk"
 
 environment:
   contents:
@@ -23,13 +13,12 @@ environment:
       - ca-certificates-bundle
       - curl
       - gradle
-      - openjdk-11
-      - openjdk-17
       - openjdk-21
-      - openjdk-8
+      - openjdk-21-default-jvm
       - unzip
   environment:
     LANG: en_US.UTF-8
+    JAVA_HOME: /usr/lib/jvm/java-21-openjdk
 
 pipeline:
   - uses: git-checkout
@@ -38,28 +27,16 @@ pipeline:
       repository: https://github.com/OpenLiberty/open-liberty
       tag: gm-${{package.version}}
 
-subpackages:
-  - range: openjdk-versions
-    name: open-liberty-openjdk-${{range.key}}
-    description: "Open Liberty is a highly composable, fast to start, dynamic application server runtime environment for OpenJDK ${{range.key}}"
-    dependencies:
-      runtime:
-        - openjdk-${{range.key}}-default-jvm
-      provides:
-        - ${{package.name}}
-      provider-priority: ${{range.key}}
-    pipeline:
-      - working-directory: dev
-        runs: |
-          export JAVA_HOME="/usr/lib/jvm/${{range.value}}"
+  - working-directory: dev
+    runs: |
+      ./gradlew cnf:initialize
+      ./gradlew assemble
+      ./gradlew releaseNeeded
 
-          ./gradlew cnf:initialize
-          ./gradlew assemble
-          ./gradlew releaseNeeded
+      mkdir -p ${{targets.contextdir}}/usr/share/java/openliberty
+      unzip -q cnf/release/dev/openliberty/${{package.version}}*/openliberty-${{package.version}}*.zip -d ${{targets.contextdir}}/usr/share/java/openliberty
 
-          mkdir -p ${{targets.contextdir}}/usr/share/java/openliberty
-          unzip -q cnf/release/dev/openliberty/${{package.version}}*/openliberty-${{package.version}}*.zip -d ${{targets.contextdir}}/usr/share/java/openliberty
-      - uses: strip
+  - uses: strip
 
 update:
   enabled: true
@@ -69,6 +46,10 @@ update:
     tag-filter: gm-
 
 test:
+  environment:
+    contents:
+      packages:
+        - openjdk-21-default-jvm
   pipeline:
     - runs: |
         export PATH="/usr/share/java/openliberty/wlp/bin:$PATH"
