--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -24,5 +24,11 @@ jobs:
       with:
         egress-policy: audit
 
+    - uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v5.0.2
+      with:
+        go-version: '1.23'
+    - run: |
+        go install github.com/wolfi-dev/wolfictl@latest
+
     - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # ratchet:actions/checkout@v4.2.2
     - run: ./lint.sh
