also install yam
Signed-off-by: Jason Hall <jason@chainguard.dev>

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -34,6 +34,8 @@ jobs:
         go-version-file: 'wolfictl/go.mod'
     - working-directory: wolfictl
       run: go install
+    # Install yam
+    - run: go install github.com/chainguard-dev/yam@latest
 
     - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # ratchet:actions/checkout@v4.2.2
     - run: ./lint.sh
