chromium.yaml: Add openssf-options

--- a/chromium.yaml
+++ b/chromium.yaml
@@ -7,7 +7,7 @@
 package:
   name: chromium
   version: 130.0.6723.69
-  epoch: 0
+  epoch: 1
   description: "Open souce version of Google's chrome web browser"
   copyright:
     - license: BSD-3-Clause
@@ -111,6 +111,7 @@ environment:
       - minizip
       - nghttp2-dev
       - openh264-dev
+      - openssf-compiler-options
       - opus-dev
       - pango
       - pango-dev
