--- a/crac-criu.yaml
+++ b/crac-criu.yaml
@@ -1,7 +1,7 @@
 package:
   name: crac-criu
   version: 1.4.3
-  epoch: 0
+  epoch: 1
   description: A project to implement checkpoint/restore functionality for Linux
   copyright:
     - license: GPL-2.0-only
@@ -30,6 +30,7 @@ environment:
       - nftables
       - nftables-dev
       - nftables-static
+      - openssf-compiler-options
       - perl
       - pkgconf
       - protobuf-c-dev
