crun.yaml: Add openssf-options

--- a/crun.yaml
+++ b/crun.yaml
@@ -1,7 +1,7 @@
 package:
   name: crun
   version: "1.18"
-  epoch: 0
+  epoch: 1
   description: "Fast and lightweight fully featured OCI runtime and C library for running containers"
   copyright:
     - license: GPL-2.0-or-later AND LGPL-2.1-or-later
@@ -17,6 +17,7 @@ environment:
       - libcap-dev
       - libseccomp
       - libseccomp-dev
+      - openssf-compiler-options
       - python3
       - wolfi-base
       - yajl
