--- a/curl-rustls.yaml
+++ b/curl-rustls.yaml
@@ -1,7 +1,7 @@
 package:
   name: curl-rustls
   version: 8.10.1
-  epoch: 0
+  epoch: 1
   description: "URL retrieval utility and library"
   copyright:
     - license: MIT
@@ -24,6 +24,7 @@ environment:
       - libpsl-dev
       - libtool
       - nghttp2-dev
+      - openssf-compiler-options
       - openssl-dev
       - perl
       - rustls-ffi-dev
