[GenAI] TigerBeetle Package Tests (#31344)
Test if --help can be run on tigerbeetle after installation

--- a/tigerbeetle.yaml
+++ b/tigerbeetle.yaml
@@ -37,3 +37,9 @@ update:
     use-tag: true
     # There are some prereleases with a weird WEEKLY format.
     tag-filter: 0.
+
+test:
+  pipeline:
+    - name: Check if TigerBeetle was installed
+      runs: |
+        tigerbeetle --help
