chore(datadog-agent-nvml): set no-provides and no-depends because of venv
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent-nvml.yaml
+++ b/datadog-agent-nvml.yaml
@@ -5,9 +5,12 @@ package:
   description: "Checks NVIDIA Management Library (NVML) exposed metrics through the Datadog Agent and can correlate them with the exposed Kubernetes devices"
   copyright:
     - license: Apache-2.0
-  dependencies:
-    runtime:
-      - python-3.11
+  options:
+    # We're creating a virtual environment.
+    # Don't pull in other packages if dependencies are already vendored.
+    no-depends: true
+    # Don't install if something is vendored that another package depends on.
+    no-provides: true
 
 environment:
   contents:
@@ -57,7 +60,8 @@ pipeline:
       # --no-cache-dir: We don't use pip to download wheels, so we don't need a cache.
       # --constraint: Match the core integrations constraint.
       #
-      # This has been omitted. It doesn't seem to work with Python projects like this managed with Hatch.
+      # This has been omitted intentionally.
+      # The project is managed with Hatch and it needs hatchling build backend as a build time dependency to create the wheel.
       # --no-index: Specify to not use any index since we won't/shouldn't download anything with pip anyway.
       #
       # This project uses hatchling as build backend, instead of setuptools, as defaulted in pip.
