fixed: change requested
Signed-off-by: hovomuradyan <88653435+hovomuradyan@users.noreply.github.com>

--- a/fluent-plugin-kafka.yaml
+++ b/fluent-plugin-kafka.yaml
@@ -18,7 +18,7 @@ package:
 environment:
   contents:
     repositories:
-      - https://packages.wolfi.dev/os  # Ensure this URL is correct
+      - https://packages.wolfi.dev/os
     keyring:
       - https://packages.wolfi.dev/os/wolfi-signing.rsa.pub
     packages:
@@ -38,7 +38,7 @@ pipeline:
     with:
       destination: ${{vars.gem}}
       repository: https://github.com/fluent/fluent-plugin-kafka
-      tag: v${{package.version}}  # Automatically checks out the tag corresponding to the version
+      tag: v${{package.version}}
 
   - working-directory: ${{vars.gem}}
     pipeline:
