fix: extra omit
Signed-off-by: hovomuradyan <88653435+hovomuradyan@users.noreply.github.com>

--- a/fluent-plugin-kafka.yaml
+++ b/fluent-plugin-kafka.yaml
@@ -11,16 +11,9 @@ package:
     runtime:
       - ruby3.2-fluentd
       - ruby3.2-kafka
-  target-architecture:
-    - aarch64
-    - x86_64
 
 environment:
   contents:
-    repositories:
-      - https://packages.wolfi.dev/os
-    keyring:
-      - https://packages.wolfi.dev/os/wolfi-signing.rsa.pub
     packages:
       - build-base
       - busybox
@@ -38,13 +31,10 @@ pipeline:
     with:
       destination: ${{vars.gem}}
       repository: https://github.com/fluent/fluent-plugin-kafka
-      tag: v${{package.version}}
+      tag: v${{package.version}}  # Automatically checks out the tag corresponding to the version
 
   - working-directory: ${{vars.gem}}
     pipeline:
-      - runs: |
-          latest_commit=$(git rev-list -n 1 --tags --skip=0)
-          echo "Latest commit for the tag: $latest_commit"
       - uses: ruby/build
         with:
           gem: ${{package.name}}
@@ -60,5 +50,3 @@ update:
     identifier: fluent/fluent-plugin-kafka
     strip-prefix: v
     use-tag: true
-
-
