add test for fluent-plugin-cloudwatch-logs
Signed-off-by: Dentrax <furkan.turkal@chainguard.dev>

--- a/fluent-plugin-cloudwatch-logs.yaml
+++ b/fluent-plugin-cloudwatch-logs.yaml
@@ -47,3 +47,9 @@ update:
     identifier: fluent-plugins-nursery/fluent-plugin-cloudwatch-logs
     strip-prefix: v
     use-tag: true
+
+test:
+  pipeline:
+    - runs: |
+        ruby -e "require 'fluent/plugin/in_cloudwatch_logs'"
+        ruby -e "require 'fluent/plugin/out_cloudwatch_logs'"
