add test for fluent-plugin-detect-exceptions
Signed-off-by: Dentrax <furkan.turkal@chainguard.dev>

--- a/fluent-plugin-detect-exceptions.yaml
+++ b/fluent-plugin-detect-exceptions.yaml
@@ -44,3 +44,9 @@ update:
   enabled: true
   github:
     identifier: GoogleCloudPlatform/fluent-plugin-detect-exceptions
+
+test:
+  pipeline:
+    - runs: |
+        ruby -e "require 'fluent/plugin/exception_detector'"
+        ruby -e "require 'fluent/plugin/out_detect_exceptions'"
