add test for fluent-plugin-elasticsearch
Signed-off-by: Dentrax <furkan.turkal@chainguard.dev>

--- a/fluent-plugin-elasticsearch.yaml
+++ b/fluent-plugin-elasticsearch.yaml
@@ -51,3 +51,11 @@ update:
     identifier: uken/fluent-plugin-elasticsearch
     strip-prefix: v
     use-tag: true
+
+test:
+  pipeline:
+    - runs: |
+        ruby -e "require 'fluent/plugin/in_elasticsearch'"
+        ruby -e "require 'fluent/plugin/out_elasticsearch'"
+        ruby -e "require 'fluent/plugin/elasticsearch_error_handler'"
+        ruby -e "require 'fluent/plugin/elasticsearch_tls'"
