add test for fluent-plugin-kubernetes_metadata_filter
Signed-off-by: Dentrax <furkan.turkal@chainguard.dev>

--- a/fluent-plugin-kubernetes_metadata_filter.yaml
+++ b/fluent-plugin-kubernetes_metadata_filter.yaml
@@ -65,3 +65,8 @@ update:
     identifier: fabric8io/fluent-plugin-kubernetes_metadata_filter
     strip-prefix: v
     use-tag: true
+
+test:
+  pipeline:
+    - runs: |
+        ruby -e "require 'fluent/plugin/filter_kubernetes_metadata'"
