add test for fluent-plugin-out-http
Signed-off-by: Dentrax <furkan.turkal@chainguard.dev>

--- a/fluent-plugin-out-http.yaml
+++ b/fluent-plugin-out-http.yaml
@@ -63,3 +63,8 @@ update:
     identifier: fluent-plugins-nursery/fluent-plugin-out-http
     strip-prefix: v
     use-tag: true
+
+test:
+  pipeline:
+    - runs: |
+        ruby -e "require 'fluent/plugin/out_http'"
