fix: update test definition ; clean up stale comments

--- a/promxy.yaml
+++ b/promxy.yaml
@@ -17,13 +17,11 @@ pipeline:
       rm -fR vendor/
   - uses: go/build
     with:
-      # NOTE: add "ui" tag when enabling embedding of UI
       packages: ./cmd/promxy
       tags: netgo,builtinassets
       output: promxy
   - uses: go/build
     with:
-      # NOTE: add "ui" tag when enabling embedding of UI
       packages: ./cmd/remote_write_exporter
       output: remote_write_exporter
 
@@ -45,5 +43,4 @@ update:
 test:
   pipeline:
     - runs: |
-        proxmy --version
-        remote_write_exporter --version
+        promxy --version
