add test for fluent-plugin-record-modifier
Signed-off-by: Dentrax <furkan.turkal@chainguard.dev>

--- a/fluent-plugin-record-modifier.yaml
+++ b/fluent-plugin-record-modifier.yaml
@@ -45,3 +45,9 @@ update:
     identifier: repeatedly/fluent-plugin-record-modifier
     strip-prefix: v
     use-tag: true
+
+test:
+  pipeline:
+    - runs: |
+        ruby -e "require 'fluent/plugin/filter_record_modifier'"
+        ruby -e "require 'fluent/plugin/out_record_modifier'"
