--- a/openssl.yaml
+++ b/openssl.yaml
@@ -30,8 +30,8 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
-      - jitterentropy-library-dev=3.5.0-r0
       # NB! pinned to version https://csrc.nist.gov/projects/cryptographic-module-validation-program/entropy-validations/certificate/191
+      - jitterentropy-library-dev=3.5.0-r0
       - jitterentropy-library=3.5.0-r0
       - openssf-compiler-options
       - perl
@@ -147,6 +147,11 @@ subpackages:
 
   - name: "openssl-dev"
     description: "OpenSSL headers"
+    dependencies:
+      runtime:
+        # TODO: for static linking only, split into openssl-static, or fix upstream
+        - jitterentropy-library-dev=3.5.0-r0
+        - jitterentropy-library=3.5.0-r0
     pipeline:
       - uses: split/dev
     test:
