add test for fluent-plugin-s3
Signed-off-by: Dentrax <furkan.turkal@chainguard.dev>

--- a/fluent-plugin-s3.yaml
+++ b/fluent-plugin-s3.yaml
@@ -50,3 +50,9 @@ update:
 
 vars:
   gem: fluent-plugin-s3
+
+test:
+  pipeline:
+    - runs: |
+        ruby -e "require 'fluent/plugin/in_s3'"
+        ruby -e "require 'fluent/plugin/out_s3'"
