add provides for fluend plugins
Signed-off-by: Dentrax <furkan.turkal@chainguard.dev>

--- a/fluent-plugin-record-modifier.yaml
+++ b/fluent-plugin-record-modifier.yaml
@@ -1,11 +1,13 @@
 package:
   name: fluent-plugin-record-modifier
   version: 2.2.0
-  epoch: 4
+  epoch: 5
   description: Filter plugin for modifying event record
   copyright:
     - license: MIT
   dependencies:
+    provides:
+      - ruby3.2-fluent-plugin-record-modifier=${{package.full-version}}
     runtime:
       - ruby3.2-fluentd
 
