--- a/fluent-plugin-cloudwatch-logs.yaml
+++ b/fluent-plugin-cloudwatch-logs.yaml
@@ -1,11 +1,13 @@
 package:
   name: fluent-plugin-cloudwatch-logs
   version: 0.14.3
-  epoch: 4
+  epoch: 5
   description: CloudWatch Logs Plugin for Fluentd
   copyright:
     - license: MIT
   dependencies:
+    provides:
+      - ruby3.2-fluent-plugin-cloudwatch-logs=${{package.full-version}}
     runtime:
       - ruby3.2-aws-sdk-cloudwatchlogs
       - ruby3.2-fluentd
