--- a/fluent-plugin-detect-exceptions.yaml
+++ b/fluent-plugin-detect-exceptions.yaml
@@ -1,11 +1,13 @@
 package:
   name: fluent-plugin-detect-exceptions
   version: 0.0.15
-  epoch: 3
+  epoch: 4
   description: Fluentd output plugin which detects exception stack traces in a stream of JSON log messages and combines all single-line messages that belong to the same stack trace into one multi-line message. This is an official Google Ruby gem.
   copyright:
     - license: Apache-2.0
   dependencies:
+    provides:
+      - ruby3.2-fluent-plugin-detect-exceptions=${{package.full-version}}
     runtime:
       - ruby3.2-fluentd
 
