--- a/fluent-plugin-elasticsearch.yaml
+++ b/fluent-plugin-elasticsearch.yaml
@@ -2,11 +2,13 @@
 package:
   name: fluent-plugin-elasticsearch
   version: 5.4.3
-  epoch: 3
+  epoch: 4
   description: Elasticsearch output plugin for Fluent event collector
   copyright:
     - license: Apache-2.0
   dependencies:
+    provides:
+      - ruby3.2-fluent-plugin-elasticsearch=${{package.full-version}}
     runtime:
       - ruby3.2-elasticsearch
       - ruby3.2-excon
