--- a/fluent-plugin-kubernetes_metadata_filter.yaml
+++ b/fluent-plugin-kubernetes_metadata_filter.yaml
@@ -1,11 +1,13 @@
 package:
   name: fluent-plugin-kubernetes_metadata_filter
   version: 3.5.1
-  epoch: 0
+  epoch: 1
   description: This is the Filter plugin to add Kubernetes metadata
   copyright:
     - license: Apache-2.0
   dependencies:
+    provides:
+      - ruby3.2-fluent-plugin-kubernetes_metadata_filter=${{package.full-version}}
     runtime:
       - ruby3.2-fluentd
       - ruby3.2-json-jwt
