--- a/fluent-plugin-newrelic.yaml
+++ b/fluent-plugin-newrelic.yaml
@@ -2,11 +2,13 @@
 package:
   name: fluent-plugin-newrelic
   version: "1.2.2_git20241029"
-  epoch: 0
+  epoch: 1
   description: Sends FluentD events to New Relic
   copyright:
     - license: Apache-2.0
   dependencies:
+    provides:
+      - ruby3.2-fluent-plugin-newrelic=${{package.full-version}}
     runtime:
       - ruby3.2-fluentd
 
