--- a/fluent-plugin-opensearch.yaml
+++ b/fluent-plugin-opensearch.yaml
@@ -6,6 +6,8 @@ package:
   copyright:
     - license: Apache-2.0
   dependencies:
+    provides:
+      - ruby3.2-fluent-plugin-opensearch=${{package.full-version}}
     runtime:
       - ruby3.2-aws-sdk-core
       - ruby3.2-faraday
