--- a/fluent-plugin-out-http.yaml
+++ b/fluent-plugin-out-http.yaml
@@ -1,11 +1,13 @@
 package:
   name: fluent-plugin-out-http
   version: 1.3.4
-  epoch: 5
+  epoch: 6
   description: This is the Fluentd output plugin for enabling http access to the container
   copyright:
     - license: Apache-2.0
   dependencies:
+    provides:
+      - ruby3.2-fluent-plugin-out-http=${{package.full-version}}
     runtime:
       - ruby3.2-fluentd
       - ruby3.2-json-jwt
