--- a/fluent-plugin-s3.yaml
+++ b/fluent-plugin-s3.yaml
@@ -1,11 +1,13 @@
 package:
   name: fluent-plugin-s3
   version: 1.7.2
-  epoch: 4
+  epoch: 5
   description: Amazon S3 output plugin for Fluentd event collector
   copyright:
     - license: Apache-2.0
   dependencies:
+    provides:
+      - ruby3.2-fluent-plugin-s3=${{package.full-version}}
     runtime:
       - ruby3.2-aws-sdk-s3
       - ruby3.2-aws-sdk-sqs
