--- a/fluent-plugin-newrelic.yaml
+++ b/fluent-plugin-newrelic.yaml
@@ -46,11 +46,8 @@ vars:
   gem: newrelic-fluentd-output
 
 update:
-  enabled: true
-  schedule:
-    period: daily
-    reason: Upstream does not maintain tags or releases
-  git:
+  enabled: false
+  exclude-reason: Upstream does not maintain tags or releases
 
 test:
   pipeline:
