Write subpkg test
Signed-off-by: anushkamittal20 <anushka.mittal@chainguard.dev>

--- a/prometheus-mysqld-exporter.yaml
+++ b/prometheus-mysqld-exporter.yaml
@@ -48,6 +48,11 @@ subpackages:
           mkdir -p ${{targets.subpkgdir}}/opt/bitnami/mysqld-exporter/bin/
           chmod g+rwX ${{targets.subpkgdir}}/opt/bitnami
           ln -sf /usr/bin/mysqld_exporter ${{targets.subpkgdir}}/opt/bitnami/mysqld-exporter/bin/mysqld_exporter
+    test:
+      pipeline:
+        - runs: |
+            run-script --version
+            run-script --help
 
 update:
   enabled: true
