--- a/freerdp.yaml
+++ b/freerdp.yaml
@@ -1,7 +1,7 @@
 package:
   name: freerdp
   version: 2.11.7
-  epoch: 2
+  epoch: 3
   description: FreeRDP client
   copyright:
     - license: Apache-2.0
@@ -27,12 +27,13 @@ environment:
       - libxext-dev
       - libxi-dev
       - libxinerama-dev
-      # - libxkbfile-dev
       - libxkb-dev
       - libxkbcommon-dev
       - libxrender-dev
       - libxv-dev
       - linux-headers
+      # - libxkbfile-dev
+      - openssf-compiler-options
       - openssl-dev>3
       - samurai
 
@@ -44,10 +45,10 @@ pipeline:
       expected-commit: 7f6cc93c21d7f0faad6daacca06f494f29ce882c
 
   - runs: |
-      CFLAGS="$CFLAGS -fPIC" \
-      CXXFLAGS="$CXXFLAGS -fPIC" \
+      CFLAGS="$CFLAGS -fPIC -Wno-incompatible-pointer-types -Wno-int-conversion" \
+      CXXFLAGS="$CXXFLAGS -fPIC -Wno-incompatible-pointer-types -Wno-int-conversion" \
       cmake -B build -G Ninja \
-        -DCMAKE_BUILD_TYPE=MinSizeRel \
+        -DCMAKE_BUILD_TYPE=Release \
         -DCMAKE_INSTALL_PREFIX=/usr \
         -DCMAKE_INSTALL_LIBDIR=lib \
         -DWITH_ALSA=ON \
