gdal didn't need changes, I did
Signed-off-by: Jason Hall <jason@chainguard.dev>

--- a/gdal.yaml
+++ b/gdal.yaml
@@ -1,7 +1,7 @@
 package:
   name: gdal
   version: 3.9.3
-  epoch: 2
+  epoch: 1
   description: GDAL is an open source MIT licensed translator library for raster and vector geospatial data formats.
   copyright:
     - license: MIT
@@ -124,7 +124,7 @@ subpackages:
     pipeline:
       - runs: |
           mkdir -p ${{targets.contextdir}}/usr/lib/
-          mv ${{targets.destdir}}/gdal-py${{range.key}}/usr/lib/python3* ${{targets.contextdir}}/usr/lib/
+          mv ${{targets.outdir}}/gdal-py${{range.key}}/usr/lib/python3* ${{targets.contextdir}}/usr/lib/
 
   - name: py3-supported-gdal
     description: Meta package providing ${{package.name}} for supported Python versions.
@@ -144,7 +144,7 @@ subpackages:
     pipeline:
       - runs: |
           mkdir -p ${{targets.contextdir}}/usr/bin
-          mv ${{targets.destdir}}/gdal-py${{range.key}}/usr/bin/* ${{targets.contextdir}}/usr/bin/
+          mv ${{targets.outdir}}/gdal-py${{range.key}}/usr/bin/* ${{targets.contextdir}}/usr/bin/
           chmod a+x scripts/*
           cp -r scripts/* ${{targets.contextdir}}/usr/bin/
     test:
