chore: updates after code review

--- a/promxy.yaml
+++ b/promxy.yaml
@@ -26,7 +26,7 @@ pipeline:
 
 subpackages:
   - name: promxy-compat
-    description: "Compatibility package to allow replacing promxy image"
+    description: "Compatibility package to symlink binaries to match upstream deployment"
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}/bin"
@@ -43,3 +43,5 @@ test:
   pipeline:
     - runs: |
         promxy --version
+        # test remote_write_exporter by validating specific help parameter exists
+        remote_write_exporter --help | grep bind-addr
