feat: add ca-certificates-bundle as dependency

--- a/promxy.yaml
+++ b/promxy.yaml
@@ -5,6 +5,9 @@ package:
   description: An aggregating proxy to enable HA prometheus.
   copyright:
     - license: MIT
+  dependencies:
+    runtime:
+      - ca-certificates-bundle
 
 pipeline:
   - uses: git-checkout
