python multi-version some more packages.
Most of these are straight forward.
Things to note:
 - rename py3-rfc3339 to py3-pyrfc3339.
   the pypi package name of the thing we have here is pyrfc3339.
 - drop package 'provides' of the pypi stylized/capitolized
   names in py3-logbook (Logbook), py3-pynacl (PyNaCl).

One thing to note:
- rename py3-py

--- a/py3-pyrfc3339.yaml
+++ b/py3-pyrfc3339.yaml
@@ -1,16 +1,16 @@
 package:
-  name: py3-minimal-snowplow-tracker
-  version: 1.0.3
-  epoch: 1
-  description: A minimal snowplow event tracker for Python. Add analytics to your Python and Django apps, webapps and games
+  name: py3-pyrfc3339
+  version: 1.1
+  epoch: 0
+  description: Generate and parse RFC 3339 timestamps
   copyright:
-    - license: Apache-2.0
+    - license: MIT
   dependencies:
     provider-priority: 0
 
 vars:
-  pypi-package: minimal-snowplow-tracker
-  import: snowplow_tracker
+  pypi-package: pyrfc3339
+  import: pyrfc3339
 
 data:
   - name: py-versions
@@ -28,9 +28,9 @@ environment:
 pipeline:
   - uses: git-checkout
     with:
-      repository: https://github.com/snowplow/snowplow-python-tracker
-      tag: ${{package.version}}
-      expected-commit: b75934afdcd40dd8804dfcc8174a59c1868ebd1c
+      repository: https://github.com/kurtraschke/pyRFC3339
+      expected-commit: e30cc1555adce0ecc7bd65509a2249d47e5a41b4
+      tag: v${{package.version}}
 
 subpackages:
   - range: py-versions
@@ -41,8 +41,7 @@ subpackages:
       provides:
         - py3-${{vars.pypi-package}}
       runtime:
-        - py${{range.key}}-requests
-        - py${{range.key}}-typing-extensions
+        - py${{range.key}}-tz
     pipeline:
       - uses: py/pip-build-install
         with:
@@ -75,6 +74,5 @@ test:
 update:
   enabled: true
   github:
-    use-tag: true
-    identifier: snowplow/snowplow-python-tracker
-    strip-suffix: .post1
+    identifier: kurtraschke/pyRFC3339
+    strip-prefix: v
