--- a/nodejs-22.yaml
+++ b/nodejs-22.yaml
@@ -1,11 +1,12 @@
 package:
   name: nodejs-22
   version: 22.11.0
-  epoch: 0
+  epoch: 1
   description: "JavaScript runtime built on V8 engine"
   dependencies:
     provides:
       - nodejs=${{package.full-version}}
+      - nodejs-lts=${{package.full-version}}
   copyright:
     - license: MIT
   resources:
