--- a/cython-0.yaml
+++ b/cython-0.yaml
@@ -1,7 +1,7 @@
 package:
   name: cython-0
   version: 0.29.37.1
-  epoch: 0
+  epoch: 1
   description: Cython is an optimising static compiler for both the Python & the extended Cython programming languages.
   copyright:
     - license: Apache-2.0
@@ -15,6 +15,7 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
+      - openssf-compiler-options
       - py3-setuptools
       - python3
       - python3-dev
