--- a/dgraph.yaml
+++ b/dgraph.yaml
@@ -1,7 +1,7 @@
 package:
   name: dgraph
   version: 24.0.4
-  epoch: 0
+  epoch: 1
   description: A distributed graph database
   copyright:
     - license: Apache-2.0
@@ -15,6 +15,7 @@ environment:
       - curl
       - go
       - jemalloc-dev
+      - openssf-compiler-options
 
 pipeline:
   - uses: git-checkout
