--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 package:
   name: docker-compose
   version: 2.30.0
-  epoch: 0
+  epoch: 1
   description: Define and run multi-container applications with Docker
   copyright:
     - license: Apache-2.0
@@ -21,6 +21,7 @@ environment:
       - libtool
       - linux-headers
       - lvm2-dev
+      - openssf-compiler-options
 
 pipeline:
   - uses: git-checkout
