docker-selenium.yaml: Add openssf-options

--- a/docker-selenium.yaml
+++ b/docker-selenium.yaml
@@ -5,7 +5,7 @@ package:
   # 'package format error' when trying to install the package. The workaround is
   # to replace '-' with '.', then mangling the version to replace back.
   version: 4.25.0.20241024
-  epoch: 0
+  epoch: 1
   description: Provides a simple way to run Selenium Grid with Chrome, Firefox, and Edge using Docker, making it easier to perform browser automation
   copyright:
     - license: Apache-2.0
@@ -40,6 +40,7 @@ environment:
       - openjdk-11
       - openjdk-11-default-jvm
       - openjdk-11-jre
+      - openssf-compiler-options
       - openssl
       - x11vnc
       - yq
