--- a/dua.yaml
+++ b/dua.yaml
@@ -1,7 +1,7 @@
 package:
   name: dua
   version: 2.29.2
-  epoch: 0
+  epoch: 1
   description: "View disk space usage and delete unwanted data, fast."
   copyright:
     - license: MIT
@@ -12,6 +12,7 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
+      - openssf-compiler-options
       - rust
       - wolfi-base
 
