--- a/erlang-26.yaml
+++ b/erlang-26.yaml
@@ -1,7 +1,7 @@
 package:
   name: erlang-26
   version: 26.2.5.4
-  epoch: 0
+  epoch: 1
   description: General-purpose programming language and runtime environment
   copyright:
     - license: Apache-2.0
@@ -21,6 +21,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - ncurses-dev
+      - openssf-compiler-options
       - openssl-dev
       - perl-dev
       - zlib-dev
