--- a/build-base.yaml
+++ b/build-base.yaml
@@ -11,6 +11,7 @@ package:
       - gcc
       - glibc-dev
       - make
+      - openssf-compiler-options
       - pkgconf
       - wolfi-baselayout
 
