updating tag-filter for metrics-scraper
Signed-off-by: Aditvil-Dev <aditya.tirmanwar@chainguard.dev>

--- a/kubernetes-dashboard-metrics-scraper.yaml
+++ b/kubernetes-dashboard-metrics-scraper.yaml
@@ -40,4 +40,4 @@ update:
     identifier: kubernetes/dashboard
     strip-prefix: v
     use-tag: true
-    tag-filter: web/v
+    tag-filter: metrics-scraper/v
