Correcting strip-tag for all packages
Signed-off-by: Aditvil-Dev <aditya.tirmanwar@chainguard.dev>

--- a/kubernetes-dashboard-api.yaml
+++ b/kubernetes-dashboard-api.yaml
@@ -38,6 +38,6 @@ update:
   enabled: true
   github:
     identifier: kubernetes/dashboard
-    strip-prefix: v
+    strip-prefix: api/v
     use-tag: true
     tag-filter: api/v
