--- a/kubernetes-dashboard-metrics-scraper.yaml
+++ b/kubernetes-dashboard-metrics-scraper.yaml
@@ -38,6 +38,6 @@ update:
   enabled: true
   github:
     identifier: kubernetes/dashboard
-    strip-prefix: v
+    strip-prefix: metrics-scraper/v
     use-tag: true
     tag-filter: metrics-scraper/v
