--- a/kubernetes-dashboard-web.yaml
+++ b/kubernetes-dashboard-web.yaml
@@ -38,6 +38,6 @@ update:
   enabled: true
   github:
     identifier: kubernetes/dashboard
-    strip-prefix: v
+    strip-prefix: web/v
     use-tag: true
     tag-filter: web/v
