--- a/kubernetes-dashboard-auth.yaml
+++ b/kubernetes-dashboard-auth.yaml
@@ -38,6 +38,6 @@ update:
   enabled: true
   github:
     identifier: kubernetes/dashboard
-    strip-prefix: v
+    strip-prefix: auth/v
     use-tag: true
     tag-filter: auth/v
