update build-time dependencies as per meson build
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/libnvme.yaml
+++ b/libnvme.yaml
@@ -11,13 +11,15 @@ environment:
     packages:
       - bash
       - build-base
-      - gcc
-      - json-c
+      - cmake
+      - json-c-dev
+      - keyutils-dev
       - meson
       - ninja
-      - openssl
+      - openssl-dev
       - python3
       - python3-dev
+      - swig
 
 pipeline:
   - uses: git-checkout
