add libnvme as runtime dep to libnvme-dev
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/libnvme.yaml
+++ b/libnvme.yaml
@@ -38,6 +38,9 @@ pipeline:
 
 subpackages:
   - name: libnvme-dev
+    dependencies:
+      runtime:
+        - libnvme
     pipeline:
       - uses: split/dev
 
