--- a/prometheus-mysqld-exporter.yaml
+++ b/prometheus-mysqld-exporter.yaml
@@ -48,6 +48,8 @@ subpackages:
           mkdir -p ${{targets.subpkgdir}}/opt/bitnami/mysqld-exporter/bin/
           chmod g+rwX ${{targets.subpkgdir}}/opt/bitnami
           ln -sf /usr/bin/mysqld_exporter ${{targets.subpkgdir}}/opt/bitnami/mysqld-exporter/bin/mysqld_exporter
+          mkdir -p ${{targets.subpkgdir}}/bin
+          ln -sf /usr/bin/mysqld_exporter ${{targets.subpkgdir}}/bin/mysqld_exporter
     test:
       pipeline:
         - runs: |
