--- a/docker-selenium.yaml
+++ b/docker-selenium.yaml
@@ -379,7 +379,7 @@ subpackages:
       pipeline:
         - runs: |
             firefox --version
-        - name: "Check selenium node-firefox status status"
+        - name: "Check selenium node-firefox status"
           uses: test/daemon-check-output
           with:
             start: "/opt/bin/start-selenium-node.sh"
