fixing more typos
Signed-off-by: uti <uti.edun@chainguard.dev>

--- a/docker-selenium.yaml
+++ b/docker-selenium.yaml
@@ -306,7 +306,7 @@ subpackages:
           CONFIG_FILE: /opt/selenium/config.toml
           SE_BIND_HOST: true
       pipeline:
-        - name: "Check selenium node-base status status"
+        - name: "Check selenium node-base status"
           uses: test/daemon-check-output
           with:
             start: "/opt/bin/start-selenium-node.sh"
@@ -341,7 +341,7 @@ subpackages:
           CONFIG_FILE: /opt/selenium/config.toml
           SE_BIND_HOST: true
       pipeline:
-        - name: "Check selenium node-chromium status status"
+        - name: "Check selenium node-chromium status"
           uses: test/daemon-check-output
           with:
             start: "/opt/bin/start-selenium-node.sh"
@@ -403,7 +403,7 @@ subpackages:
           CONFIG_FILE: /opt/selenium/config.toml
           SE_BIND_HOST: true
       pipeline:
-        - name: "Check selenium standalone-chromium status status"
+        - name: "Check selenium standalone-chromium status"
           uses: test/daemon-check-output
           with:
             start: "/opt/bin/start-selenium-node.sh"
