remove libnvme and fix tests
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/nvme-cli.yaml
+++ b/nvme-cli.yaml
@@ -12,8 +12,6 @@ environment:
       - bash
       - build-base
       - json-c
-      - libnvme
-      - libnvme
       - libnvme-dev
       - meson
 
@@ -55,7 +53,6 @@ update:
     identifier: linux-nvme/nvme-cli
 
 test:
-  environment: {}
   pipeline:
-    - name: Verify nvme-cli installation, please improve the test as needed
-      runs: nvme-cli --version || exit 1
+    - name: version test
+      runs: nvme --version | grep ${{package.version}}
