address review comments
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/nvme-cli.yaml
+++ b/nvme-cli.yaml
@@ -11,7 +11,6 @@ environment:
     packages:
       - bash
       - build-base
-      - json-c
       - libnvme-dev
       - meson
 
@@ -57,3 +56,8 @@ test:
   pipeline:
     - name: version test
       runs: nvme --version | grep ${{package.version}}
+    - name: more tests
+      runs: |
+        nvme list
+        nvme help | grep discover
+        nvme gen-tls-key
