--- a/php-8.1-pecl-raphf.yaml
+++ b/php-8.1-pecl-raphf.yaml
@@ -34,14 +34,9 @@ pipeline:
 
   - uses: autoconf/make
 
-  # TODO: This is a temporary workaround until the pecl/install pipelines
-  # propagates through.
-  # https://github.com/chainguard-dev/melange/pull/1068
-  - name: Install
-    runs: |
-      make INSTALL_ROOT="${{targets.destdir}}" install
-      install -d ${{targets.destdir}}/etc/php/conf.d
-      echo "extension=raphf.so" > ${{targets.destdir}}/etc/php/conf.d/raphf.ini
+  - uses: pecl/install
+    with:
+      extension: "raphf"
 
   # PHP initialization is order dependent. So we will explicitly
   # load this by prefixing the file with 10- so it runs before
