--- a/php-8.2-pecl-http.yaml
+++ b/php-8.2-pecl-http.yaml
@@ -39,14 +39,9 @@ pipeline:
 
   - uses: autoconf/make
 
-  # TODO: This is a temporary workaround until the pecl/install pipelines
-  # propagates through.
-  # https://github.com/chainguard-dev/melange/pull/1068
-  - name: Install
-    runs: |
-      make INSTALL_ROOT="${{targets.destdir}}" install
-      install -d ${{targets.destdir}}/etc/php/conf.d
-      echo "extension=http.so" > ${{targets.destdir}}/etc/php/conf.d/http.ini
+  - uses: pecl/install
+    with:
+      extension: "http"
 
   - uses: strip
 
