--- a/php-8.2-pecl-raphf.yaml
+++ b/php-8.2-pecl-raphf.yaml
@@ -38,11 +38,10 @@ pipeline:
     with:
       extension: "raphf"
 
-  # PHP initialization is order dependent. So we will explicitly
-  # load this by prefixing the file with 10- so it runs before
-  # other modules which start with letters
-  # starts.
   - runs: |
+      # PHP initialization is order dependent. So we will explicitly
+      # load this by prefixing the file with 10- so it runs before
+      # other modules which start with letters starts.
       mv ${{targets.destdir}}/etc/php/conf.d/raphf.ini ${{targets.destdir}}/etc/php/conf.d/10-raphf.ini
 
   - uses: strip
