Adding ldgflag for setting version
Signed-off-by: Aditvil-Dev <aditya.tirmanwar@chainguard.dev>

--- a/kubernetes-dashboard-api.yaml
+++ b/kubernetes-dashboard-api.yaml
@@ -18,6 +18,7 @@ pipeline:
       packages: .
       modroot: ./modules/api
       output: dashboard-api
+      ldflags: -X k8s.io/dashboard/api/pkg/environment.Version=${{package.version}}
 
 test:
   pipeline:
@@ -27,6 +28,9 @@ test:
         dashboard-api  --bind-address=0.0.0.0 --kubeconfig=/root/.kube/config &> dashboard-api.log &
         sleep 5
         grep "Starting Kubernetes Dashboard API" dashboard-api.log || exit 1
+    - name: Check version in logs
+      runs: |
+        grep "${{package.version}}" dashboard-api.log || exit 1
 
 update:
   enabled: true
