--- a/kubernetes-dashboard-web.yaml
+++ b/kubernetes-dashboard-web.yaml
@@ -18,6 +18,7 @@ pipeline:
       packages: .
       modroot: ./modules/web
       output: dashboard-web
+      ldflags: -X k8s.io/dashboard/web/pkg/environment.Version=${{package.version}}
 
 test:
   pipeline:
@@ -27,6 +28,9 @@ test:
         dashboard-web --bind-address=0.0.0.0 --kubeconfig=/root/.kube/config &> dashboard-web.log &
         sleep 5
         grep "Starting Kubernetes Dashboard Web" dashboard-web.log || exit 1
+    - name: Check version in logs
+      runs: |
+        grep "${{package.version}}" dashboard-web.log || exit 1
 
 update:
   enabled: true
