--- a/kubernetes-dashboard-auth.yaml
+++ b/kubernetes-dashboard-auth.yaml
@@ -18,6 +18,7 @@ pipeline:
       packages: .
       modroot: ./modules/auth
       output: dashboard-auth
+      ldflags: -X k8s.io/dashboard/auth/pkg/environment.Version=${{package.version}}
 
 test:
   pipeline:
@@ -27,6 +28,9 @@ test:
         dashboard-auth --address=0.0.0.0 --apiserver-host="https://accounts.google.com" --kubeconfig=/root/.kube/config &> dashboard-auth.log &
         sleep 5
         grep "Starting Kubernetes Dashboard Auth" dashboard-auth.log || exit 1
+    - name: Check version in logs
+      runs: |
+        grep "${{package.version}}" dashboard-auth.log || exit 1
 
 update:
   enabled: true
