--- a/kubernetes-dashboard-metrics-scraper.yaml
+++ b/kubernetes-dashboard-metrics-scraper.yaml
@@ -18,6 +18,7 @@ pipeline:
       packages: .
       modroot: ./modules/metrics-scraper
       output: dashboard-metrics-scraper
+      ldflags: -X k8s.io/dashboard/metrics-scraper/pkg/environment.Version=${{package.version}}
 
 test:
   pipeline:
@@ -27,6 +28,9 @@ test:
         dashboard-metrics-scraper --kubeconfig=/root/.kube/config  &> dashboard-metrics-scraper.log &
         sleep 5
         grep "Starting Metrics Scraper" dashboard-metrics-scraper.log || exit 1
+    - name: Check version in logs
+      runs: |
+        grep "${{package.version}}" dashboard-metrics-scraper.log || exit 1
 
 update:
   enabled: true
