feat(cloud-provider-aws): add compat package
Signed-off-by: Sam Singh Anantha <samsinghanantha@gmail.com>

--- a/cloud-provider-aws.yaml
+++ b/cloud-provider-aws.yaml
@@ -52,6 +52,16 @@ subpackages:
         - runs: |
             ecr-credential-provider --help
             ecr-credential-provider --version
+  
+  - name: "${{package.name}}-compat"
+    description: "Compatibility package to place binaries in the location expected by upstream Dockerfile"
+    dependencies:
+      runtime:
+        - aws-cloud-controller-manager
+    pipeline:
+      - runs: |
+          mkdir -p "${{targets.subpkgdir}}/bin"
+          ln -sf /usr/bin/aws-cloud-controller-manager ${{targets.subpkgdir}}/bin/aws-cloud-controller-manager
 
 update:
   enabled: true
