--- a/avahi.yaml
+++ b/avahi.yaml
@@ -1,7 +1,7 @@
 package:
   name: avahi
   version: 0.9_rc1
-  epoch: 1
+  epoch: 2
   description: A multicast/unicast DNS-SD framework
   copyright:
     - license: LGPL-2.0-or-later
@@ -27,6 +27,7 @@ environment:
       - libdaemon-dev
       - libevent-dev
       - libtool
+      - openssf-compiler-options
       - pkgconf-dev
       - systemd-dev
 
