--- a/gcp-compute-persistent-disk-csi-driver-1.15.yaml
+++ b/gcp-compute-persistent-disk-csi-driver-1.15.yaml
@@ -1,6 +1,6 @@
 package:
-  name: gcp-compute-persistent-disk-csi-driver
-  version: 1.12.13
+  name: gcp-compute-persistent-disk-csi-driver-1.15
+  version: 1.15.1
   epoch: 0
   description: The Google Compute Engine Persistent Disk (GCE PD) Container Storage Interface (CSI) Storage Plugin.
   copyright:
@@ -43,7 +43,6 @@ package:
       - ncurses
       - nvme-cli
       - readline
-      - systemd
       - umount
       - userspace-rcu
       - util-linux
@@ -57,7 +56,7 @@ pipeline:
     with:
       repository: https://github.com/kubernetes-sigs/gcp-compute-persistent-disk-csi-driver
       tag: v${{package.version}}
-      expected-commit: 26a78fed067ffd9bfd7727241a876e0482ef3caa
+      expected-commit: 8c21c23edf516250992f2b9a0a2cd667489d30b8
 
   - uses: go/build
     with:
@@ -83,4 +82,4 @@ update:
   enabled: true
   github:
     identifier: kubernetes-sigs/gcp-compute-persistent-disk-csi-driver
-    strip-prefix: v
+    strip-prefix: v1.15
