add tag-filtering for scope version stream
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/gcp-compute-persistent-disk-csi-driver-1.15.yaml
+++ b/gcp-compute-persistent-disk-csi-driver-1.15.yaml
@@ -82,4 +82,5 @@ update:
   enabled: true
   github:
     identifier: kubernetes-sigs/gcp-compute-persistent-disk-csi-driver
-    strip-prefix: v1.15
+    strip-prefix: v
+    tag-filter: v1.15
