--- a/deno.yaml
+++ b/deno.yaml
@@ -1,7 +1,7 @@
 package:
   name: deno
   version: 2.0.4
-  epoch: 0
+  epoch: 1
   description: "A modern runtime for JavaScript and TypeScript."
   copyright:
     - license: MIT
@@ -17,6 +17,7 @@ environment:
       - clang
       - cmake
       - glibc-dev
+      - openssf-compiler-options
       - posix-libc-utils
       - protobuf-dev
       - protoc
