--- a/drawio.yaml
+++ b/drawio.yaml
@@ -13,6 +13,10 @@ package:
       - ffmpeg-dev
       - libnss
       - mesa-libgallium
+      - Xvfb
+      - xvfb-run
+      - xkeyboard-config
+      - xkbcomp
 
 environment:
   contents:
