chore: adds runtime dep for azuredisk-csi-1.31
Signed-off-by: Mritunjay Sharma <mritunjay.sharma@chainguard.dev>

--- a/azuredisk-csi-1.31.yaml
+++ b/azuredisk-csi-1.31.yaml
@@ -1,11 +1,24 @@
 package:
   name: azuredisk-csi-1.31
   version: 1.31.0
-  epoch: 1
+  epoch: 2
   description: Azure Disk CSI Driver
   copyright:
     - license: Apache-2.0
   dependencies:
+    runtime:
+      - blkid
+      - btrfs-progs
+      - ca-certificates-bundle
+      - device-mapper
+      - e2fsprogs
+      - e2fsprogs-extra
+      - lsblk
+      - mount
+      - umount
+      - util-linux
+      - util-linux-misc
+      - xfsprogs
     provides:
       - azuredisk-csi=${{package.full-version}}
 
