increase resources for some packages
Signed-off-by: Jason Hall <jason@chainguard.dev>

--- a/percona-server-8.4.yaml
+++ b/percona-server-8.4.yaml
@@ -6,6 +6,9 @@ package:
   copyright:
     - license: GPL-3.0-or-later
     - license: BSD-3-Clause
+  resources:
+    cpu: 16
+    memory: 16Gi
   dependencies:
     provides:
       - percona-server=${{package.full-version}}
