--- a/crossplane-provider-aws.yaml
+++ b/crossplane-provider-aws.yaml
@@ -5,6 +5,9 @@ package:
   description: Official AWS Provider for Crossplane by Upbound
   copyright:
     - license: Apache-2.0
+  resources:
+    cpu: 16
+    memory: 16Gi
   dependencies:
     runtime:
       - terraform-provider-aws
