--- a/drawio.yaml
+++ b/drawio.yaml
@@ -49,8 +49,8 @@ pipeline:
       
       cp -a ./dist/linux-unpacked/. "${{targets.destdir}}"/usr/local/bin/
       cp -a ./dist/linux-unpacked/*.so "${{targets.destdir}}"/usr/local/lib/
-
-      chmod -R 4755 "${{targets.destdir}}"/usr/local/bin/
+      
+      chmod -R 4755 "${{targets.destdir}}"/usr/local/bin/chrome-sandbox
       
       mv "${{targets.destdir}}"/usr/local/bin/draw.io "${{targets.destdir}}"/usr/local/bin/drawio
 
