--- a/exim.yaml
+++ b/exim.yaml
@@ -1,7 +1,7 @@
 package:
   name: exim
   version: "4.98"
-  epoch: 1
+  epoch: 2
   description: Message Transfer Agent
   copyright:
     - license: GPL-2.0-or-later
@@ -22,6 +22,7 @@ environment:
       - linux-headers
       - mariadb
       - mariadb-connector-c-dev
+      - openssf-compiler-options
       - openssl-dev>3
       - pcre2-dev
       - perl
