--- a/extism.yaml
+++ b/extism.yaml
@@ -1,7 +1,7 @@
 package:
   name: extism
   version: 1.6.0
-  epoch: 0
+  epoch: 1
   description: The extism CLI is used to manage Extism installations
   copyright:
     - license: BSD-3-Clause
@@ -12,6 +12,7 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
+      - openssf-compiler-options
 
 pipeline:
   - uses: git-checkout
