eza.yaml: Add openssf-options

--- a/eza.yaml
+++ b/eza.yaml
@@ -1,7 +1,7 @@
 package:
   name: eza
   version: 0.20.5
-  epoch: 0
+  epoch: 1
   description: "A modern, maintained replacement for ls"
   copyright:
     - license: MIT
@@ -13,6 +13,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - libgit2-dev
+      - openssf-compiler-options
       - rust
       - zlib-dev
 
