--- a/filebeat.yaml
+++ b/filebeat.yaml
@@ -1,7 +1,7 @@
 package:
   name: filebeat
   version: 8.15.3
-  epoch: 0
+  epoch: 1
   description: Filebeat is an open source file harvester, mostly used to fetch logs files and feed them into logstash
   copyright:
     - license: Apache-2.0
@@ -17,6 +17,7 @@ environment:
       - ca-certificates-bundle
       - go
       - make
+      - openssf-compiler-options
       - python3
 
 pipeline:
