--- a/flyte.yaml
+++ b/flyte.yaml
@@ -1,7 +1,7 @@
 package:
   name: flyte
   version: 1.13.3
-  epoch: 0
+  epoch: 1
   description: Scalable and flexible workflow orchestration platform that seamlessly unifies data, ML and analytics stacks.
   copyright:
     - license: Apache-2.0
@@ -13,6 +13,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - go
+      - openssf-compiler-options
       - wolfi-baselayout
 
 pipeline:
