gstreamer.yaml: Add openssf-options

--- a/gstreamer.yaml
+++ b/gstreamer.yaml
@@ -2,7 +2,7 @@
 package:
   name: gstreamer
   version: 1.24.8
-  epoch: 0
+  epoch: 1
   description: GStreamer streaming media framework
   copyright:
     - license: LGPL-2.0-or-later
@@ -24,6 +24,7 @@ environment:
       - libcap-utils
       - libxml2-dev
       - meson
+      - openssf-compiler-options
       - perl
 
 pipeline:
