harfbuzz.yaml: Add openssf-options

--- a/harfbuzz.yaml
+++ b/harfbuzz.yaml
@@ -1,7 +1,7 @@
 package:
   name: harfbuzz
   version: 10.0.1
-  epoch: 0
+  epoch: 1
   description: Text shaping library
   copyright:
     - license: MIT
@@ -23,6 +23,7 @@ environment:
       - graphite2-dev
       - icu-dev
       - meson
+      - openssf-compiler-options
       - posix-libc-utils
       - zlib-dev
 
