test: Introduce basic test
Signed-off-by: Joshua Powers <joshua.powers@chainguard.dev>

--- a/sftpgo-plugin-kms.yaml
+++ b/sftpgo-plugin-kms.yaml
@@ -19,6 +19,13 @@ pipeline:
       output: sftpgo-plugin-kms
       ldflags: -X main.commitHash=$(git describe --always) -X main.date=$(date -u +%FT%TZ)
 
+test:
+  pipeline:
+    # Cannot actually run the binary as it is a plugin, not something expected
+    # to be run and will error out if run directly.
+    - name: Stat the plugin
+      runs: stat /usr/bin/sftpgo-plugin-kms
+
 update:
   enabled: true
   github:
