hwloc: don't test x86_64 only binaries on arm64

--- a/hwloc.yaml
+++ b/hwloc.yaml
@@ -90,8 +90,10 @@ test:
         hwloc-diff --help
         hwloc-distrib --version
         hwloc-distrib --help
-        hwloc-gather-cpuid --version
-        hwloc-gather-cpuid --help
+        if [[ uname -m == 'x86_64']]; then
+          hwloc-gather-cpuid --version
+          hwloc-gather-cpuid --help
+        fi;
         hwloc-gather-topology --version
         hwloc-gather-topology --help
         hwloc-info --version
@@ -106,5 +108,7 @@ test:
         lstopo --help
         lstopo-no-graphics --version
         lstopo-no-graphics --help
-        hwloc-dump-hwdata --version
-        hwloc-dump-hwdata --help
+        if [[ uname -m == 'x86_64']]; then
+          hwloc-dump-hwdata --version
+          hwloc-dump-hwdata --help
+        fi
