test: Introduce basic test
Signed-off-by: Joshua Powers <joshua.powers@chainguard.dev>

--- a/certificate-transparency.yaml
+++ b/certificate-transparency.yaml
@@ -43,6 +43,9 @@ subpackages:
           mkdir -p ${{targets.subpkgdir}}/usr/bin
           mv ${{range.key}} ${{targets.subpkgdir}}/usr/bin/${{range.key}}
       - uses: strip
+    test:
+      pipeline:
+        - runs: /usr/bin/trillian-ctserver --help
 
 update:
   enabled: true
