--- a/ruby3.2-json.yaml
+++ b/ruby3.2-json.yaml
@@ -20,9 +20,11 @@ environment:
 pipeline:
   - uses: git-checkout
     with:
-      repository: https://github.com/flori/json
+      repository: https://github.com/ruby/json
       tag: v${{package.version}}
       expected-commit: 9d711865da1ee4fe90e91e692e320d5ed5eb4fa2
+      cherry-picks: |
+        v2.7.x/d230ffb775ebcc77201919a7cef8e1d92fce6a21: fixed version number
 
   - uses: ruby/build
     with:
@@ -45,7 +47,7 @@ test:
 update:
   enabled: true
   github:
-    identifier: flori/json
+    identifier: ruby/json
     strip-prefix: v
     use-tag: true
 
