gtk-2.0: Ignore some warnings

--- a/gtk-2.0.yaml
+++ b/gtk-2.0.yaml
@@ -47,6 +47,8 @@ environment:
       - shared-mime-info
       - tiff-dev
       - zlib-dev
+  environment:
+    CFLAGS: -Wno-deprecated-declarations -Wno-unused-but-set-variable -Wno-incompatible-pointer-types -Wno-implicit-int
 
 pipeline:
   - uses: fetch
